Update text for permission gates

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -302,7 +302,6 @@
   "Geoprivacy-status": "Geoprivacy: { $status }",
   "Get-an-instant-ID-of-any-plant-animal-fungus": "Get an instant ID of any plant, animal, or fungus",
   "Get-identifications-from-real-people": "Get identifications from real people.",
-  "Get-more-accurate-suggestions-create-useful-data": "Get more accurate suggestions & create useful data for science using your location",
   "Get-your-identification-verified-by-real-people": "Get your identification verified by real people in the iNaturalist community",
   "Getting-an-even-more-accurate-ID": "Getting an even more accurate ID...",
   "Go-back": "Go back",
@@ -328,6 +327,7 @@
   "Identifiers": "Identifiers",
   "Identifiers-View": "Identifiers View",
   "Identify-an-organism": "Identify an organism",
+  "Identify-organisms-in-real-time-with-your-camera": "Identify organisms in real time with your camera",
   "Identify-species-anywhere": "Identify species anywhere",
   "If-an-account-with-that-email-exists": "If an account with that email exists, we've sent password reset instructions to your email.",
   "If-you-have-an-existing-account-try-sign-in-reset": "If you have an existing iNat account, try signing in with your username and password, or try resetting your password using the email address associated with your account.",
@@ -340,11 +340,13 @@
   "Ignoring-location": "Ignoring location",
   "Import-Photos-From": "Import Photos From",
   "IMPORT-X-OBSERVATIONS": "IMPORT { $count ->\n  [one] 1 OBSERVATION\n *[other] { $count } OBSERVATIONS\n}",
+  "Improve-suggestions-by-using-your-location": "Improve suggestions by using your location",
   "IMPROVE-THESE-SUGGESTIONS-BY-USING-YOUR-LOCATION": "IMPROVE THESE SUGGESTIONS BY USING YOUR LOCATION",
   "improving--identification": "Improving",
   "INATURALIST-ACCOUNT-SETTINGS": "INATURALIST ACCOUNT SETTINGS",
   "iNaturalist-AI-Camera": "iNaturalist AI Camera",
-  "iNaturalist-can-save-photos-you-take-in-the-app-to-your-devices-photo-library": "iNaturalist can save photos you take in the app to your device’s photo library.",
+  "iNaturalist-can-save-photos-you-take-in-the-app-to-your-devices-library": "iNaturalist can save photos you take in the app to your device’s library.",
+  "iNaturalist-can-use-your-location-to-give-you-better-identification-suggestions": "iNaturalist can use your location to give you better identification suggestions. We also use it to help you find species seen nearby. Sharing your location makes it easier to create useful data for science.",
   "INATURALIST-COMMUNITY": "INATURALIST COMMUNITY",
   "iNaturalist-couldnt-identify-this-organism": "iNaturalist couldn’t identify this organism.",
   "INATURALIST-FORUM": "INATURALIST FORUM",
@@ -366,7 +368,6 @@
   "INATURALIST-TEAM": "INATURALIST TEAM",
   "iNaturalist-users-who-have-left-an-identification": "iNaturalist users who have left an identification on another user's observation",
   "iNaturalist-users-who-have-observed": "iNaturalist users who have observed a particular taxon at a particular time and place",
-  "iNaturalist-uses-your-location-to-give-you": "iNaturalist uses your location to give you better identification suggestions and we can automatically add a location to your observations, which helps scientists. We also use it to help you find organisms observed near your location.",
   "iNaturalists-apps-are-designed-and-developed-3": "iNaturalist's apps are designed, developed, and supported by the iNaturalist team: Yaron Budowski, Amanda Bullington, Tony Iwane, Johannes Klein, Patrick Leary, Joanne Lin, Scott Loarie, Abhas Misraraj, Sylvain Morin, Carrie Seltzer, Alex Shepard, Thea Skaff, Angie Ta, Ken-ichi Ueda, Kirk van Gorkom, Jason Walthall, & Jane Weeden.",
   "iNaturalists-vision-is-a-world": "iNaturalist's vision is a world where everyone can understand and sustain biodiversity through the practice of observing wild organisms and sharing information about them.",
   "Individual-encounters-with-organisms": "Individual encounters with organisms at a particular time and location, usually with evidence",
@@ -506,7 +507,6 @@
   "Observations-need-location-date--warning": "iNaturalist observations need a location and date to be useful to scientists. Please check observations with this icon before uploading.",
   "Observations-View": "Observations View",
   "OBSERVATIONS-WITHOUT-NUMBER": "{ $count ->\n  [one] OBSERVATION\n *[other] OBSERVATIONS\n}",
-  "Observe-and-identify-organisms-in-real-time-with-your-camera": "Observe and identify organisms in real time with your camera",
   "OBSERVE-ORGANISMS": "OBSERVE ORGANISMS",
   "OBSERVED-AT--label": "OBSERVED AT",
   "OBSERVED-IN--label": "OBSERVED IN",
@@ -649,8 +649,8 @@
   "Ranks-Zoosubsection": "Zoosubsection",
   "Read-more-on-Wikipedia": "Read more on Wikipedia",
   "Record-a-sound": "Record a sound",
+  "Record-animal-sounds": "Record animal sounds",
   "RECORD-NEW-SOUND": "RECORD NEW SOUND",
-  "Record-organism-sounds-with-the-microphone": "Record organism sounds with the microphone",
   "RECORD-SOUND": "RECORD SOUND",
   "Record-verb": "Record",
   "Recording-sound": "Recording sound",
@@ -689,7 +689,7 @@
   "SAVE-FOR-LATER": "SAVE FOR LATER",
   "SAVE-LOCATION": "SAVE LOCATION",
   "SAVE-PHOTOS": "SAVE PHOTOS",
-  "Save-photos-to-your-photo-library": "Save photos to your photo library",
+  "Save-photos-to-your-library": "Save photos to your library",
   "Saved-Observation": "Saved observation, in queue to upload",
   "Scan-the-area-around-you-for-organisms": "Scan the area around you for organisms.",
   "Scientific-Name": "Scientific Name",
@@ -840,8 +840,8 @@
   "Use-iNaturalists-AI-Camera": "Use iNaturalist's AI Camera to identify organisms in real time",
   "USE-LOCATION": "USE LOCATION",
   "Use-the-devices-other-camera": "Use the device's other camera.",
-  "Use-the-iNaturalist-camera-to-observe-2": "Use iNaturalist to observe and identify organisms in real time. Share them with our community to get identifications and contribute to science!",
-  "Use-your-devices-microphone-to-record": "Use your device’s microphone to record sounds made by organisms and share them with our community to get identifications and contribute to science!",
+  "Use-the-iNaturalist-camera-to-see-real-time-identifications-and-take-photos": "Use the iNaturalist camera to see real-time identifications and take photos!",
+  "Use-your-devices-microphone-to-record-animal-sounds-and-share-them": "Use your device’s microphone to record animal sounds and share them to get identifications and contribute to science!",
   "USER": "USER",
   "User": "User { $userHandle }",
   "USERNAME-OR-EMAIL": "USERNAME OR EMAIL",
@@ -946,7 +946,6 @@
   "Your-location-uncertainty-is-over-x-km": "Your location uncertainty is over { $x } km, which is too high to be helpful to identifiers. Edit the location and zoom in until the accuracy circle turns green and is centered on where you observed the organism.",
   "Your-observations-can-help-scientists": "Your observations can help scientists!",
   "Your-observations-can-now-help-scientists": "Your observations can now help scientists.",
-  "Youre-always-in-control-of-the-location-privacy": "You’re always in control of the location privacy of every observation you create.",
   "Youve-denied-permission-prompt": "You’ve denied permission. Please grant permission in the settings app.",
   "Youve-made-5-observations": "You’ve made 5 observations!",
   "Youve-previously-denied-camera-permissions": "You've previously denied camera permissions, so please enable them in settings.",
