--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -1,4 +1,5 @@
 {
+  "A-global-community-for-nature": "A global community for nature",
   "ABOUT": "ABOUT",
   "ABOUT-COLLECTION-PROJECTS": "ABOUT COLLECTION PROJECTS",
   "ABOUT-INATURALIST": "ABOUT INATURALIST",
@@ -332,7 +333,7 @@
   "If-an-account-with-that-email-exists": "If an account with that email exists, we've sent password reset instructions to your email.",
   "If-you-have-an-existing-account-try-sign-in-reset": "If you have an existing iNat account, try signing in with your username and password, or try resetting your password using the email address associated with your account.",
   "If-you-leave-x-of-your-observations-removed": "If you leave this traditional project, { $count ->\n  [one] 1 of your observations\n *[other] { $count } of your observations\n} will also be removed from this project.",
-  "If-you-took-the-original-photo-you-can-help": "If you took the original photo of the organism, you can help train iNaturalist to identify this species by saving and uploading it to iNaturalist, where the community can help identify it.",
+  "If-you-save-this-observation-and-upload-it-to-iNaturalist": "If you save this observation and upload it to iNaturalist, other people may be able to help identify it.",
   "If-you-want-to-collate-compare-promote": "If you want to collate, compare, or promote a set of existing projects, then an Umbrella project is what you should use. For example the 2018 City Nature Challenge, which collated over 60 projects, made for a great landing page where anyone could compare and contrast each city's observations. Both Collection and Traditional projects can be used in an Umbrella project, and up to 500 projects can be collated by an Umbrella project.",
   "If-youre-seeing-this-error": "If you're seeing this and you're online, iNat staff have already been notified. Thanks for finding a bug! If you're offline, please take a screenshot and send us an email when you're back on the Internet.",
   "IGNORE-LOCATION": "IGNORE LOCATION",
@@ -348,7 +349,6 @@
   "iNaturalist-can-save-photos-you-take-in-the-app-to-your-devices-library": "iNaturalist can save photos you take in the app to your device’s library.",
   "iNaturalist-can-use-your-location-to-give-you-better-identification-suggestions": "iNaturalist can use your location to give you better identification suggestions. We also use it to help you find species seen nearby. Sharing your location makes it easier to create useful data for science.",
   "INATURALIST-COMMUNITY": "INATURALIST COMMUNITY",
-  "iNaturalist-couldnt-identify-this-organism": "iNaturalist couldn’t identify this organism.",
   "INATURALIST-FORUM": "INATURALIST FORUM",
   "iNaturalist-has-no-ID-suggestions-for-this-photo": "iNaturalist has no ID suggestions for this photo.",
   "INATURALIST-HELP-PAGE": "INATURALIST HELP PAGE",
@@ -381,9 +381,9 @@
   "It-might-be-one-of-these": "It might be one of these",
   "January": "January",
   "JOIN": "JOIN",
+  "Join-a-global-community-for-nature": "Join a global community for nature",
   "JOIN-PROJECT": "JOIN PROJECT",
   "JOIN-PROJECT--question": "JOIN PROJECT?",
-  "Join-the-largest-community-of-naturalists": "Join the largest community of naturalists in the world!",
   "JOINED": "JOINED",
   "Joined-date": "Joined: { $date }",
   "JOINED-X-PROJECTS": "{ $count ->\n  [one] JOINED { $count } PROJECT\n *[other] JOINED { $count } PROJECTS\n}",
@@ -414,7 +414,6 @@
   "Log-in-to-iNaturalist": "Log in to iNaturalist",
   "LOG-OUT": "LOG OUT",
   "LOG-OUT--question": "LOG OUT?",
-  "Login-sub-title": "Document living things, identify organisms & contribute to science",
   "Lowest": "Lowest",
   "LOWEST-RANK": "LOWEST RANK",
   "MAP": "MAP",
@@ -531,6 +530,7 @@
   "Opens-location-permission-prompt": "Opens location permission prompt",
   "Opens-the-side-drawer-menu": "Opens the side drawer menu.",
   "OR-SIGN-IN-WITH": "OR SIGN IN WITH",
+  "Or-you-can-try-to-get-a-clearer-photo-by-zooming-in-getting-closer": "Or, you can try to get a clearer photo by zooming in, getting closer, or trying a different angle.",
   "Organism-is-captive": "Organism is captive",
   "Organisms-that-are-identified-to-species": "Organisms that are identified to species rank or below",
   "Other": "Other",
@@ -552,6 +552,7 @@
   "Please-make-sure-your-password-is-at-least-6-characters": "Please make sure your password is at least 6 characters.",
   "Please-try-again-when-you-are-connected-to-the-internet": "Please try again when you are connected to the Internet.",
   "Please-try-again-when-you-are-online": "Please try again when you are online!",
+  "Point-the-camera-at-an-animal-plant-or-fungus": "Point the camera at an animal, plant, or fungus",
   "POTENTIAL-DISAGREEMENT": "POTENTIAL DISAGREEMENT",
   "Potential-disagreement-description": "<0>Is the evidence enough to confirm this is </0><1></1><0>?<0>",
   "Potential-disagreement-disagree": "<0>No, but this is a member of </0><1></1>",
@@ -691,7 +692,6 @@
   "SAVE-PHOTOS": "SAVE PHOTOS",
   "Save-photos-to-your-library": "Save photos to your library",
   "Saved-Observation": "Saved observation, in queue to upload",
-  "Scan-the-area-around-you-for-organisms": "Scan the area around you for organisms.",
   "Scientific-Name": "Scientific Name",
   "Scientific-Name-Common-Name": "Scientific Name (Common Name)",
   "Scientists-use-citizen-science-data": "Scientists use citizen science data just like yours to help better understand species across the globe.",
@@ -794,6 +794,8 @@
   "That-email-is-already-associated-with-an-account": "That email is already associated with an account.",
   "That-user-profile-doesnt-exist": "That user profile doesn't exist",
   "That-username-is-unavailable": "That username is unavailable",
+  "The-AI-is-not-confident-It-may-be-one-of-the-IDs-below": "The AI is not confident. It may be one of the IDs below.",
+  "The-AI-is-not-confident-Upload-to-ask-the-community": "The AI is not confident. Upload to ask the community.",
   "The-exact-location-will-be-hidden": "The exact location will be hidden publicly, and instead generalized to a larger area. (Threatened and endangered species are automatically obscured).",
   "The-iNaturalist-Network": "The iNaturalist network is a collection of localized websites that are fully connected to the global iNaturalist community. Network sites are supported by local institutions that promote local use and facilitate the use of data from iNaturalist to benefit local biodiversity.",
   "The-location-will-not-be-visible-to-others": "The location will not be visible to others, which might make the observation impossible to identify",
@@ -869,7 +871,6 @@
   "Watch-your-notifications-for-identifications": "Watch your notifications for identifications!",
   "We-are-not-confident-enough-to-make-a-top-ID-suggestion": "We’re not confident enough to make a top ID suggestion, but here are some other suggestions:",
   "Welcome-back": "Welcome back!",
-  "Were-not-confident-enough-to-make-an-ID": "We’re not confident enough to make an ID.",
   "Weve-made-some-updates": "We've made some updates, so we recommend taking a look at your settings. You can always update these later.",
   "WHAT-IS-INATURALIST": "WHAT IS INATURALIST?",
   "Whats-more-by-recording": "What's more, by recording and sharing your observations, you'll create research-quality data for scientists working to better understand and protect nature. So if you like recording your findings from the outdoors, or if you just like learning about life, join us!",
