Carousel, Permission, Match, Login, AI Camera copy edits (#2802)
* Text updates and AICamera icon update for onboarding carousel

* Update background image camera permission

* Update text for permission gates

* Update text match screen, login signup, and camera

* Fix AICamera test

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -1,4 +1,5 @@
 {
+  "A-global-community-for-nature": "A global community for nature",
   "ABOUT": "ABOUT",
   "ABOUT-COLLECTION-PROJECTS": "ABOUT COLLECTION PROJECTS",
   "ABOUT-INATURALIST": "ABOUT INATURALIST",
@@ -122,20 +123,17 @@
   "COMMENT": "COMMENT",
   "Comment-options": "Comment options",
   "Common-Name-Scientific-Name": "Common Name (Scientific Name)",
-  "Community-based": "Community-based",
   "Community-Discussion": "Community Discussion",
   "Community-Guidelines": "Community Guidelines",
   "COMMUNITY-GUIDELINES": "COMMUNITY GUIDELINES",
   "Confidence--label": "Confidence",
   "CONFIRM": "CONFIRM",
   "Congrats-on-making-your-first-observation": "Congrats on making your first observation!",
-  "CONNECT-TO-NATURE": "CONNECT TO NATURE",
-  "Connect-to-Nature": "Connect to Nature",
+  "Connect-with-expert-naturalists": "Connect with expert naturalists",
   "Connect-with-other-naturalists": "Connect with other naturalists and engage in conversations.",
   "Connection-problem-Please-try-again-later": "Connection problem. Please try again later.",
   "CONTACT-SUPPORT": "CONTACT SUPPORT",
   "CONTINUE": "CONTINUE",
-  "Contribute-to-Science": "Contribute to Science",
   "Coordinates-copied-to-clipboard": "Coordinates copied to clipboard",
   "Copy-coordinates": "Copy Coordinates",
   "Copyright": "Copyright",
@@ -225,6 +223,7 @@
   "DISCARD-RECORDING": "DISCARD RECORDING",
   "DISCARD-SOUND--question": "DISCARD SOUND?",
   "DISCARD-X-OBSERVATIONS": "{ $count ->\n  [one] DISCARD OBSERVATION\n *[other] DISCARD { $count } OBSERVATIONS\n}",
+  "DISCOVER-NATURE-AROUND-YOU": "DISCOVER NATURE AROUND YOU",
   "DISMISS": "DISMISS",
   "Do-you-know-what-group-this-is-in": "Do you know what group this is in?",
   "DONATE": "DONATE",
@@ -264,6 +263,7 @@
   "EXACT-DATE": "EXACT DATE",
   "except": "except",
   "EXPAND-MAP": "EXPAND MAP",
+  "Experts-help-verify-and-improve-IDs": "Experts help verify and improve IDs",
   "Explore": "Explore",
   "EXPLORE": "EXPLORE",
   "Explore-Filters": "Explore Filters",
@@ -301,8 +301,8 @@
   "Forgot-Password": "Forgot Password",
   "GEOPRIVACY": "GEOPRIVACY",
   "Geoprivacy-status": "Geoprivacy: { $status }",
+  "Get-an-instant-ID-of-any-plant-animal-fungus": "Get an instant ID of any plant, animal, or fungus",
   "Get-identifications-from-real-people": "Get identifications from real people.",
-  "Get-more-accurate-suggestions-create-useful-data": "Get more accurate suggestions & create useful data for science using your location",
   "Get-your-identification-verified-by-real-people": "Get your identification verified by real people in the iNaturalist community",
   "Getting-an-even-more-accurate-ID": "Getting an even more accurate ID...",
   "Go-back": "Go back",
@@ -313,6 +313,7 @@
   "Group-photos-onboarding": "Group photos into observations– make sure there is only one species per observation",
   "Grow-your-collection": "Grow your collection",
   "HELP": "HELP",
+  "Help-protect-species": "Help protect species",
   "Hide": "Hide",
   "Highest": "Highest",
   "HIGHEST-RANK": "HIGHEST RANK",
@@ -327,11 +328,12 @@
   "Identifiers": "Identifiers",
   "Identifiers-View": "Identifiers View",
   "Identify-an-organism": "Identify an organism",
-  "Identify-record-learn": "Identify, record, and learn about every living species on earth using iNaturalist",
+  "Identify-organisms-in-real-time-with-your-camera": "Identify organisms in real time with your camera",
+  "Identify-species-anywhere": "Identify species anywhere",
   "If-an-account-with-that-email-exists": "If an account with that email exists, we've sent password reset instructions to your email.",
   "If-you-have-an-existing-account-try-sign-in-reset": "If you have an existing iNat account, try signing in with your username and password, or try resetting your password using the email address associated with your account.",
   "If-you-leave-x-of-your-observations-removed": "If you leave this traditional project, { $count ->\n  [one] 1 of your observations\n *[other] { $count } of your observations\n} will also be removed from this project.",
-  "If-you-took-the-original-photo-you-can-help": "If you took the original photo of the organism, you can help train iNaturalist to identify this species by saving and uploading it to iNaturalist, where the community can help identify it.",
+  "If-you-save-this-observation-and-upload-it-to-iNaturalist": "If you save this observation and upload it to iNaturalist, other people may be able to help identify it.",
   "If-you-want-to-collate-compare-promote": "If you want to collate, compare, or promote a set of existing projects, then an Umbrella project is what you should use. For example the 2018 City Nature Challenge, which collated over 60 projects, made for a great landing page where anyone could compare and contrast each city's observations. Both Collection and Traditional projects can be used in an Umbrella project, and up to 500 projects can be collated by an Umbrella project.",
   "If-youre-seeing-this-error": "If you're seeing this and you're online, iNat staff have already been notified. Thanks for finding a bug! If you're offline, please take a screenshot and send us an email when you're back on the Internet.",
   "IGNORE-LOCATION": "IGNORE LOCATION",
@@ -339,14 +341,14 @@
   "Ignoring-location": "Ignoring location",
   "Import-Photos-From": "Import Photos From",
   "IMPORT-X-OBSERVATIONS": "IMPORT { $count ->\n  [one] 1 OBSERVATION\n *[other] { $count } OBSERVATIONS\n}",
+  "Improve-suggestions-by-using-your-location": "Improve suggestions by using your location",
   "IMPROVE-THESE-SUGGESTIONS-BY-USING-YOUR-LOCATION": "IMPROVE THESE SUGGESTIONS BY USING YOUR LOCATION",
   "improving--identification": "Improving",
-  "iNat-is-global-community": "iNaturalist is a global community of naturalists creating open data for science by collectively observing & identifying organisms",
   "INATURALIST-ACCOUNT-SETTINGS": "INATURALIST ACCOUNT SETTINGS",
   "iNaturalist-AI-Camera": "iNaturalist AI Camera",
-  "iNaturalist-can-save-photos-you-take-in-the-app-to-your-devices-photo-library": "iNaturalist can save photos you take in the app to your device’s photo library.",
+  "iNaturalist-can-save-photos-you-take-in-the-app-to-your-devices-library": "iNaturalist can save photos you take in the app to your device’s library.",
+  "iNaturalist-can-use-your-location-to-give-you-better-identification-suggestions": "iNaturalist can use your location to give you better identification suggestions. We also use it to help you find species seen nearby. Sharing your location makes it easier to create useful data for science.",
   "INATURALIST-COMMUNITY": "INATURALIST COMMUNITY",
-  "iNaturalist-couldnt-identify-this-organism": "iNaturalist couldn’t identify this organism.",
   "INATURALIST-FORUM": "INATURALIST FORUM",
   "iNaturalist-has-no-ID-suggestions-for-this-photo": "iNaturalist has no ID suggestions for this photo.",
   "INATURALIST-HELP-PAGE": "INATURALIST HELP PAGE",
@@ -366,7 +368,6 @@
   "INATURALIST-TEAM": "INATURALIST TEAM",
   "iNaturalist-users-who-have-left-an-identification": "iNaturalist users who have left an identification on another user's observation",
   "iNaturalist-users-who-have-observed": "iNaturalist users who have observed a particular taxon at a particular time and place",
-  "iNaturalist-uses-your-location-to-give-you": "iNaturalist uses your location to give you better identification suggestions and we can automatically add a location to your observations, which helps scientists. We also use it to help you find organisms observed near your location.",
   "iNaturalists-apps-are-designed-and-developed-3": "iNaturalist's apps are designed, developed, and supported by the iNaturalist team: Yaron Budowski, Amanda Bullington, Tony Iwane, Johannes Klein, Patrick Leary, Joanne Lin, Scott Loarie, Abhas Misraraj, Sylvain Morin, Carrie Seltzer, Alex Shepard, Thea Skaff, Angie Ta, Ken-ichi Ueda, Kirk van Gorkom, Jason Walthall, & Jane Weeden.",
   "iNaturalists-vision-is-a-world": "iNaturalist's vision is a world where everyone can understand and sustain biodiversity through the practice of observing wild organisms and sharing information about them.",
   "Individual-encounters-with-organisms": "Individual encounters with organisms at a particular time and location, usually with evidence",
@@ -380,9 +381,9 @@
   "It-might-be-one-of-these": "It might be one of these",
   "January": "January",
   "JOIN": "JOIN",
+  "Join-a-global-community-for-nature": "Join a global community for nature",
   "JOIN-PROJECT": "JOIN PROJECT",
   "JOIN-PROJECT--question": "JOIN PROJECT?",
-  "Join-the-largest-community-of-naturalists": "Join the largest community of naturalists in the world!",
   "JOINED": "JOINED",
   "Joined-date": "Joined: { $date }",
   "JOINED-X-PROJECTS": "{ $count ->\n  [one] JOINED { $count } PROJECT\n *[other] JOINED { $count } PROJECTS\n}",
@@ -413,7 +414,6 @@
   "Log-in-to-iNaturalist": "Log in to iNaturalist",
   "LOG-OUT": "LOG OUT",
   "LOG-OUT--question": "LOG OUT?",
-  "Login-sub-title": "Document living things, identify organisms & contribute to science",
   "Lowest": "Lowest",
   "LOWEST-RANK": "LOWEST RANK",
   "MAP": "MAP",
@@ -504,10 +504,8 @@
   "Observation-with-no-evidence": "Observation with no evidence",
   "Observations": "Observations",
   "Observations-need-location-date--warning": "iNaturalist observations need a location and date to be useful to scientists. Please check observations with this icon before uploading.",
-  "Observations-on-iNat-are-cited": "Observations on iNaturalist are cited in scientific papers, have led to rediscoveries, and help scientists understand life on our planet",
   "Observations-View": "Observations View",
   "OBSERVATIONS-WITHOUT-NUMBER": "{ $count ->\n  [one] OBSERVATION\n *[other] OBSERVATIONS\n}",
-  "Observe-and-identify-organisms-in-real-time-with-your-camera": "Observe and identify organisms in real time with your camera",
   "OBSERVE-ORGANISMS": "OBSERVE ORGANISMS",
   "OBSERVED-AT--label": "OBSERVED AT",
   "OBSERVED-IN--label": "OBSERVED IN",
@@ -532,6 +530,7 @@
   "Opens-location-permission-prompt": "Opens location permission prompt",
   "Opens-the-side-drawer-menu": "Opens the side drawer menu.",
   "OR-SIGN-IN-WITH": "OR SIGN IN WITH",
+  "Or-you-can-try-to-get-a-clearer-photo-by-zooming-in-getting-closer": "Or, you can try to get a clearer photo by zooming in, getting closer, or trying a different angle.",
   "Organism-is-captive": "Organism is captive",
   "Organisms-that-are-identified-to-species": "Organisms that are identified to species rank or below",
   "Other": "Other",
@@ -553,6 +552,7 @@
   "Please-make-sure-your-password-is-at-least-6-characters": "Please make sure your password is at least 6 characters.",
   "Please-try-again-when-you-are-connected-to-the-internet": "Please try again when you are connected to the Internet.",
   "Please-try-again-when-you-are-online": "Please try again when you are online!",
+  "Point-the-camera-at-an-animal-plant-or-fungus": "Point the camera at an animal, plant, or fungus",
   "POTENTIAL-DISAGREEMENT": "POTENTIAL DISAGREEMENT",
   "Potential-disagreement-description": "<0>Is the evidence enough to confirm this is </0><1></1><0>?<0>",
   "Potential-disagreement-disagree": "<0>No, but this is a member of </0><1></1>",
@@ -650,8 +650,8 @@
   "Ranks-Zoosubsection": "Zoosubsection",
   "Read-more-on-Wikipedia": "Read more on Wikipedia",
   "Record-a-sound": "Record a sound",
+  "Record-animal-sounds": "Record animal sounds",
   "RECORD-NEW-SOUND": "RECORD NEW SOUND",
-  "Record-organism-sounds-with-the-microphone": "Record organism sounds with the microphone",
   "RECORD-SOUND": "RECORD SOUND",
   "Record-verb": "Record",
   "Recording-sound": "Recording sound",
@@ -690,9 +690,8 @@
   "SAVE-FOR-LATER": "SAVE FOR LATER",
   "SAVE-LOCATION": "SAVE LOCATION",
   "SAVE-PHOTOS": "SAVE PHOTOS",
-  "Save-photos-to-your-photo-library": "Save photos to your photo library",
+  "Save-photos-to-your-library": "Save photos to your library",
   "Saved-Observation": "Saved observation, in queue to upload",
-  "Scan-the-area-around-you-for-organisms": "Scan the area around you for organisms.",
   "Scientific-Name": "Scientific Name",
   "Scientific-Name-Common-Name": "Scientific Name (Common Name)",
   "Scientists-use-citizen-science-data": "Scientists use citizen science data just like yours to help better understand species across the globe.",
@@ -795,6 +794,8 @@
   "That-email-is-already-associated-with-an-account": "That email is already associated with an account.",
   "That-user-profile-doesnt-exist": "That user profile doesn't exist",
   "That-username-is-unavailable": "That username is unavailable",
+  "The-AI-is-not-confident-It-may-be-one-of-the-IDs-below": "The AI is not confident. It may be one of the IDs below.",
+  "The-AI-is-not-confident-Upload-to-ask-the-community": "The AI is not confident. Upload to ask the community.",
   "The-exact-location-will-be-hidden": "The exact location will be hidden publicly, and instead generalized to a larger area. (Threatened and endangered species are automatically obscured).",
   "The-iNaturalist-Network": "The iNaturalist network is a collection of localized websites that are fully connected to the global iNaturalist community. Network sites are supported by local institutions that promote local use and facilitate the use of data from iNaturalist to benefit local biodiversity.",
   "The-location-will-not-be-visible-to-others": "The location will not be visible to others, which might make the observation impossible to identify",
@@ -841,13 +842,14 @@
   "Use-iNaturalists-AI-Camera": "Use iNaturalist's AI Camera to identify organisms in real time",
   "USE-LOCATION": "USE LOCATION",
   "Use-the-devices-other-camera": "Use the device's other camera.",
-  "Use-the-iNaturalist-camera-to-observe-2": "Use iNaturalist to observe and identify organisms in real time. Share them with our community to get identifications and contribute to science!",
-  "Use-your-devices-microphone-to-record": "Use your device’s microphone to record sounds made by organisms and share them with our community to get identifications and contribute to science!",
+  "Use-the-iNaturalist-camera-to-see-real-time-identifications-and-take-photos": "Use the iNaturalist camera to see real-time identifications and take photos!",
+  "Use-your-devices-microphone-to-record-animal-sounds-and-share-them": "Use your device’s microphone to record animal sounds and share them to get identifications and contribute to science!",
   "USER": "USER",
   "User": "User { $userHandle }",
   "USERNAME-OR-EMAIL": "USERNAME OR EMAIL",
   "Users": "Users",
   "Using-location": "Using location",
+  "Verified-IDs-are-used-for-science-and-conservation": "Verified IDs are used for science and conservation",
   "Version-app-build": "Version { $appVersion } ({ $buildVersion })",
   "VIEW-ALL-X-PLACES": "VIEW ALL { $count } PLACES",
   "VIEW-ALL-X-PROJECTS": "VIEW ALL { $count } PROJECTS",
@@ -869,7 +871,6 @@
   "Watch-your-notifications-for-identifications": "Watch your notifications for identifications!",
   "We-are-not-confident-enough-to-make-a-top-ID-suggestion": "We’re not confident enough to make a top ID suggestion, but here are some other suggestions:",
   "Welcome-back": "Welcome back!",
-  "Were-not-confident-enough-to-make-an-ID": "We’re not confident enough to make an ID.",
   "Weve-made-some-updates": "We've made some updates, so we recommend taking a look at your settings. You can always update these later.",
   "WHAT-IS-INATURALIST": "WHAT IS INATURALIST?",
   "Whats-more-by-recording": "What's more, by recording and sharing your observations, you'll create research-quality data for scientists working to better understand and protect nature. So if you like recording your findings from the outdoors, or if you just like learning about life, join us!",
@@ -946,7 +947,6 @@
   "Your-location-uncertainty-is-over-x-km": "Your location uncertainty is over { $x } km, which is too high to be helpful to identifiers. Edit the location and zoom in until the accuracy circle turns green and is centered on where you observed the organism.",
   "Your-observations-can-help-scientists": "Your observations can help scientists!",
   "Your-observations-can-now-help-scientists": "Your observations can now help scientists.",
-  "Youre-always-in-control-of-the-location-privacy": "You’re always in control of the location privacy of every observation you create.",
   "Youve-denied-permission-prompt": "You’ve denied permission. Please grant permission in the settings app.",
   "Youve-made-5-observations": "You’ve made 5 observations!",
   "Youve-previously-denied-camera-permissions": "You've previously denied camera permissions, so please enable them in settings.",
