Update first observation pivot card

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -128,7 +128,7 @@
   "COMMUNITY-GUIDELINES": "COMMUNITY GUIDELINES",
   "Confidence--label": "Confidence",
   "CONFIRM": "CONFIRM",
-  "Congrats-on-making-your-first-observation": "Congrats on making your first observation!",
+  "Congratulations-You-made-your-first-observation": "Congratulations! You made your first observation!",
   "Connect-with-expert-naturalists": "Connect with expert naturalists",
   "Connect-with-other-naturalists": "Connect with other naturalists and engage in conversations.",
   "Connection-problem-Please-try-again-later": "Connection problem. Please try again later.",
@@ -311,7 +311,6 @@
   "Grant-Permission-title": "Grant Permission",
   "Group-Photos": "Group Photos",
   "Group-photos-onboarding": "Group photos into observations– make sure there is only one species per observation",
-  "Grow-your-collection": "Grow your collection",
   "HELP": "HELP",
   "Help-protect-species": "Help protect species",
   "Hide": "Hide",
@@ -837,7 +836,6 @@
   "Uploaded-via-application": "Uploaded via: { $application }",
   "Uploading-x-of-y": "Uploading { $currentUploadCount } of { $total }",
   "Uploading-x-of-y-observations": "{ $total ->\n  [one] Uploading { $currentUploadCount } observation\n *[other] Uploading { $currentUploadCount } of { $total } observations\n}",
-  "Use-iNaturalist-to-collect-any-kind-of": "Use iNaturalist to collect any kind of plant, insect, spider, bird, or other animal and add them to your observations!",
   "Use-iNaturalist-to-identify-any-living-thing": "Use iNaturalist to identify any living thing",
   "Use-iNaturalists-AI-Camera": "Use iNaturalist's AI Camera to identify organisms in real time",
   "USE-LOCATION": "USE LOCATION",
@@ -930,7 +928,6 @@
   "You-likely-observed-a-new-species": "You likely observed a new species!",
   "You-likely-observed-a-species": "You likely observed a species",
   "You-likely-observed-an-organism-in-this-group": "You likely observed an organism in this group",
-  "You-make-an-observation-every-time-you": "You make an observation every time you take a picture of an organism with a date and location.",
   "You-may-have-observed-a-new-species": "You may have observed a new species!",
   "You-may-have-observed-a-species": "You may have observed a species",
   "You-may-have-observed-an-organism-in-this-group": "You may have observed an organism in this group",
