Update second pivot card

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -302,7 +302,6 @@
   "GEOPRIVACY": "GEOPRIVACY",
   "Geoprivacy-status": "Geoprivacy: { $status }",
   "Get-an-instant-ID-of-any-plant-animal-fungus": "Get an instant ID of any plant, animal, or fungus",
-  "Get-identifications-from-real-people": "Get identifications from real people.",
   "Get-your-identification-verified-by-real-people": "Get your identification verified by real people in the iNaturalist community",
   "Getting-an-even-more-accurate-ID": "Getting an even more accurate ID...",
   "Go-back": "Go back",
@@ -316,7 +315,6 @@
   "Hide": "Hide",
   "Highest": "Highest",
   "HIGHEST-RANK": "HIGHEST RANK",
-  "How-does-it-feel-to-identify": "How does it feel to identify and connect to the nature around you?",
   "I-agree-to-the-Terms-of-Use": "<0>I agree to the Terms of Use and Privacy Policy, and I have reviewed the Community Guidelines (</0><1>required</1><0>).</0>",
   "Iconic-taxon-name": "Iconic taxon name: { $iconicTaxon }",
   "ID-Suggestions": "ID Suggestions",
@@ -394,6 +392,7 @@
   "Lat-Lon": "{ NUMBER($latitude, maximumFractionDigits: \"6\") }, { NUMBER($longitude, maximumFractionDigits: \"6\") }",
   "Lat-Lon-Acc": "Lat: { NUMBER($latitude, maximumFractionDigits: \"6\") }, Lon: { NUMBER($longitude, maximumFractionDigits: \"6\") }, Acc: { $accuracy }",
   "leading--identification": "Leading",
+  "Learn-from-people-who-verify-and-refine-your-identifications": "Learn from people who verify and refine your identifications.",
   "Learn-More": "Learn More",
   "LEARN-MORE-ABOUT-THIS-GROUP": "LEARN MORE ABOUT THIS GROUP",
   "LEARN-MORE-ABOUT-THIS-SPECIES": "LEARN MORE ABOUT THIS SPECIES",
@@ -534,7 +533,6 @@
   "Organisms-that-are-identified-to-species": "Organisms that are identified to species rank or below",
   "Other": "Other",
   "OTHER-DATA": "OTHER DATA",
-  "Other-members-of-our-community-can-verify": "Other members of our community can verify and identify your observations if you upload them to iNaturalist.",
   "OTHER-SUGGESTIONS": "OTHER SUGGESTIONS",
   "PASSWORD": "PASSWORD",
   "PEOPLE--title": "PEOPLE",
@@ -693,7 +691,6 @@
   "Saved-Observation": "Saved observation, in queue to upload",
   "Scientific-Name": "Scientific Name",
   "Scientific-Name-Common-Name": "Scientific Name (Common Name)",
-  "Scientists-use-citizen-science-data": "Scientists use citizen science data just like yours to help better understand species across the globe.",
   "SEARCH": "SEARCH",
   "Search": "Search",
   "Search-for-a-project": "Search for a project",
@@ -833,6 +830,7 @@
   "Upload-Progress": "Upload { $uploadProgress } percent complete",
   "UPLOAD-TO-INATURALIST": "UPLOAD TO INATURALIST",
   "Upload-x-observations": "Upload { $count ->\n  [one] 1 observation\n *[other] { $count } observations\n}",
+  "Upload-your-observations-to-contribute-data-to-help-save-species": "Upload your observations to contribute data to help save species.",
   "Uploaded-via-application": "Uploaded via: { $application }",
   "Uploading-x-of-y": "Uploading { $currentUploadCount } of { $total }",
   "Uploading-x-of-y-observations": "{ $total ->\n  [one] Uploading { $currentUploadCount } observation\n *[other] Uploading { $currentUploadCount } of { $total } observations\n}",
@@ -942,10 +940,9 @@
   "Your-donation-to-iNaturalist": "Your donation to iNaturalist supports the improvement and stability of the mobile apps and website that connects millions of people to nature and enables the protection of biodiversity worldwide!",
   "Your-email-is-confirmed": "Your email is confirmed! Please log in to continue.",
   "Your-location-uncertainty-is-over-x-km": "Your location uncertainty is over { $x } km, which is too high to be helpful to identifiers. Edit the location and zoom in until the accuracy circle turns green and is centered on where you observed the organism.",
-  "Your-observations-can-help-scientists": "Your observations can help scientists!",
+  "Your-observations-can-help-science": "Your observations can help science!",
   "Your-observations-can-now-help-scientists": "Your observations can now help scientists.",
   "Youve-denied-permission-prompt": "You’ve denied permission. Please grant permission in the settings app.",
-  "Youve-made-5-observations": "You’ve made 5 observations!",
   "Youve-previously-denied-camera-permissions": "You've previously denied camera permissions, so please enable them in settings.",
   "Youve-previously-denied-location-permissions": "You’ve previously denied location permissions, so please enable them in settings.",
   "Youve-previously-denied-microphone-permissions": "You’ve previously denied microphone permissions, so please enable them in settings.",
