--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -329,6 +329,7 @@
   "Identify-species-anywhere": "Identify species anywhere",
   "If-an-account-with-that-email-exists": "If an account with that email exists, we've sent password reset instructions to your email.",
   "If-you-have-an-existing-account-try-sign-in-reset": "If you have an existing iNat account, try signing in with your username and password, or try resetting your password using the email address associated with your account.",
+  "If-you-hold-down-instead-of-tapping-the-camera-button-you-can": "If you hold down (instead of tapping) the camera button, you can record sounds, take multiple photos, and import from your photo library.",
   "If-you-leave-x-of-your-observations-removed": "If you leave this traditional project, { $count ->\n  [one] 1 of your observations\n *[other] { $count } of your observations\n} will also be removed from this project.",
   "If-you-save-this-observation-and-upload-it-to-iNaturalist": "If you save this observation and upload it to iNaturalist, other people may be able to help identify it.",
   "If-you-want-to-collate-compare-promote": "If you want to collate, compare, or promote a set of existing projects, then an Umbrella project is what you should use. For example the 2018 City Nature Challenge, which collated over 60 projects, made for a great landing page where anyone could compare and contrast each city's observations. Both Collection and Traditional projects can be used in an Umbrella project, and up to 500 projects can be collated by an Umbrella project.",
@@ -916,7 +917,6 @@
   "You-can-click-join-on-the-project-page": "You can click “join” on the project page.",
   "You-can-find-answers-on-our-help-page": "You can find answers on our help page.",
   "You-can-only-add-20-photos-per-observation": "You can only add 20 photos per observation",
-  "You-can-record-sounds-take-multiple-photos-import": "You can record sounds, take multiple photos, import from your photo library, and more by holding down (instead of tapping) the camera button.",
   "You-can-still-share-the-file": "You can still share the file with another app. If you can email it, please send it to { $email }",
   "You-can-upload-this-observation-to-our-community": "You can upload this observation to our community to get an identification from a real person, and help our AI improve its identifications in the future",
   "You-changed-filters-will-be-discarded": "You changed filters, but they were not applied to your explore search results.",
