Update account creation pivot card

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -42,7 +42,7 @@
   "All": "All",
   "All-observation-options": "All observation options (including iNaturalist AI Camera, Standard Camera, Uploading from Photo Library, and Sound Recorder)",
   "All-observations": "All observations",
-  "All-observations-submitted-to-iNaturalist-need-a-date-and-location": "All observations submitted to iNaturalist need a date and location to be useful to scientists. Please update observations if they need more information.",
+  "All-observations-need-a-date-and-location-to-be-used-for-science": "All observations need a date and location to be used for science. Please edit observations if they need more information.",
   "All-organisms": "All organisms",
   "all-rights-reserved": "all rights reserved",
   "All-taxa": "All taxa",
@@ -302,6 +302,7 @@
   "GEOPRIVACY": "GEOPRIVACY",
   "Geoprivacy-status": "Geoprivacy: { $status }",
   "Get-an-instant-ID-of-any-plant-animal-fungus": "Get an instant ID of any plant, animal, or fungus",
+  "Get-feedback-from-naturalists-and-experts-who-will-help-verify": "Get feedback from naturalists and experts who will help verify and refine your identifications.",
   "Get-your-identification-verified-by-real-people": "Get your identification verified by real people in the iNaturalist community",
   "Getting-an-even-more-accurate-ID": "Getting an even more accurate ID...",
   "Go-back": "Go back",
@@ -311,6 +312,7 @@
   "Group-Photos": "Group Photos",
   "Group-photos-onboarding": "Group photos into observations– make sure there is only one species per observation",
   "HELP": "HELP",
+  "Help-create-Research-Grade-data-used-in-science-and-conservation": "Help create Research Grade data used in science and conservation.",
   "Help-protect-species": "Help protect species",
   "Hide": "Hide",
   "Highest": "Highest",
@@ -916,6 +918,7 @@
   "You-can-also-check-out-merchandise": "You can also check out merchandise for iNaturalist and Seek at our store below!",
   "You-can-click-join-on-the-project-page": "You can click “join” on the project page.",
   "You-can-find-answers-on-our-help-page": "You can find answers on our help page.",
+  "You-can-now-upload-your-observations-to-iNaturalist-and-contribute": "You can now upload your observations to iNaturalist and contribute to global biodiversity research.",
   "You-can-only-add-20-photos-per-observation": "You can only add 20 photos per observation",
   "You-can-still-share-the-file": "You can still share the file with another app. If you can email it, please send it to { $email }",
   "You-can-upload-this-observation-to-our-community": "You can upload this observation to our community to get an identification from a real person, and help our AI improve its identifications in the future",
@@ -941,7 +944,7 @@
   "Your-email-is-confirmed": "Your email is confirmed! Please log in to continue.",
   "Your-location-uncertainty-is-over-x-km": "Your location uncertainty is over { $x } km, which is too high to be helpful to identifiers. Edit the location and zoom in until the accuracy circle turns green and is centered on where you observed the organism.",
   "Your-observations-can-help-science": "Your observations can help science!",
-  "Your-observations-can-now-help-scientists": "Your observations can now help scientists.",
+  "Youre-ready-to-share-your-observations": "You’re ready to share your observations!",
   "Youve-denied-permission-prompt": "You’ve denied permission. Please grant permission in the settings app.",
   "Youve-previously-denied-camera-permissions": "You've previously denied camera permissions, so please enable them in settings.",
   "Youve-previously-denied-location-permissions": "You’ve previously denied location permissions, so please enable them in settings.",
